Fixed squished nvd3 charts. Removed validation route. Fixed toasts

--- a/client/styles/main.less
+++ b/client/styles/main.less
@@ -88,13 +88,13 @@ md-card.md-dark {
 
 // TOAST
 md-toast.md-success-toast-theme {
-    background-color: lightgreen;//green;
+    background-color: #67E54E;//green;
 }
 md-toast.md-error-toast-theme {
-    background-color: red;
+    background-color: #FF922B;
 }
 md-toast.md-info-toast-theme {
-    background-color: lightblue;
+    background-color: #55BEFF;
 }
 
 .header-card {
